Bug 1147819 - Any media element should be stopped by the AudioChannelService when the window is destroyed, r=ehsan